k8s-project/name-space-wordpress.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: wordpress-namespace
    labels:
        name: wodpress
